--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -36,6 +36,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.0.x
+      - name: Setup wasm-tools
+        run: dotnet workload install wasm-tools
       - name: Publish
         env:
           NuGetPackageSourceCredentials_darkrrb_github: Username=DarkRRb;Password=${{ secrets.DARKRRB_PACKAGES_READONLY_TOKEN }}
